--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" type="image/x-icon" href="./assets/favicon/favicon.png" />
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="styles.css" />
         <title>Central Park Sari-Sari Store</title>
     </head>
     <body>
         <main class="container">
-            <div class="input-group mb-3">
+            <div class="input-group my-3">
                 <span class="input-group-text">Search: </span>
                 <input id="search" type="text" class="form-control" placeholder="Item Name" />
+                <button class="mx-4">Add Item</button>
             </div>
-            <table class="table table-hover table-striped table-responsive">
+            <table class="table table-hover table-responsive text-center">
                 <thead>
                     <tr>
                         <th>ITEM</th>
+                        <th>IMAGE</th>
                         <th>PRICE</th>
+                        <th>ACTION</th>
                     </tr>
                 </thead>
                 <tbody id="items-table"></tbody>
-                <tfoot>
-                    <tr id="pagination" class="text-center"></tr>
+                <tfoot class="text-center">
+                    <tr>
+                        <td colspan="4" id="pagination"></td>
+                    </tr>
                 </tfoot>
             </table>
         </main>
