--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <label>SEARCH</label>
                 <input id="search" type="text" class="" placeholder="Item Name" value="" />
                 <button id="clear"><i class="bi bi-arrow-counterclockwise"></i></button>
-                <button id="modal-btn-open">New Item</button>
+                <button id="modal-btn-open">Add</button>
             </div>
             <table class="table table-hover table-responsive text-center">
                 <thead>
