--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="styles.css" />
+        <link rel="stylesheet" href="loader.css" />
         <title>Central Park Sari-Sari Store</title>
     </head>
     <body>
@@ -36,8 +37,8 @@
                 </tfoot>
             </table>
         </main>
-        <dialog id="modal-add">
-            <h4>New Item</h4>
+        <dialog id="modal-form">
+            <h4 id="modal-title">New Item</h4>
             <form>
                 <label>Item: </label>
                 <input type="text" id="item-name" required placeholder="Item Name" />
@@ -51,6 +52,7 @@
                 <button id="modal-btn-submit" type="button">Submit</button>
             </form>
         </dialog>
+        <div id="loader"></div>
     </body>
     <script src="./db.js"></script>
     <script src="./display.js"></script>
